--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 14 23:38:30 ICT 2023
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+#Wed Nov 15 00:02:29 ICT 2023
+sdk.dir=C\:\\Users\\LENOVO\\AppData\\Local\\Android\\Sdk
