--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Salon"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,5 +21,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
+            android:name=".BookingActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
+            android:name=".LookbookActivity"
+            android:exported="false">
+        </activity>
+
     </application>
+
 </manifest>
