--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".InfoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,6 +55,10 @@
         </activity>
         <activity
             android:name=".ForgotActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".LoginActivity"
             android:exported="false">
         </activity>
     </application>
