--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,8 @@
         tools:targetApi="31">
         <activity
             android:name=".InfoActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -36,7 +32,22 @@
         </activity>
 
         <activity
-            android:name=".BookingActivity"
+            android:name=".Booking_sel_locale"
+
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Booking_sel_schedule"
+            android:exported="false">
+        </activity>
+
+        <activity android:name=".booking_sel_staff"
+            android:exported="false">
+        </activity>
+        <activity android:name=".booking_confirm"
             android:exported="false">
         </activity>
 
