--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="31">
         <activity
             android:name=".InfoActivity"
-            android:exported="false">
+            android:exported="true">
 
         </activity>
 
@@ -33,8 +33,12 @@
 
         <activity
             android:name=".Booking_sel_locale"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity android:name=".Booking_sel_schedule"
@@ -42,7 +46,7 @@
         </activity>
 
         <activity android:name=".booking_sel_staff"
-            android:exported="false">
+            android:exported="true">
         </activity>
         <activity android:name=".booking_confirm"
             android:exported="false">
@@ -70,12 +74,21 @@
             android:exported="false">
 
         </activity>
+        <activity android:name=".NotiActivity"
+            android:exported="false">
+
+        </activity>
+        <activity android:name=".Shopping"
+                android:exported="false">
+
+        </activity>
+        <activity android:name=".History"
+                  android:exported="false">
+
+        </activity>
         <activity android:name=".test"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
