--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Nov 15 00:02:29 ICT 2023
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Kien vip\\AppData\\Local\\Android\\Sdk
