--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="31">
         <activity
             android:name=".InfoActivity"
-            android:exported="false">
+            android:exported="true">
 
         </activity>
 
@@ -33,16 +33,12 @@
 
         <activity
             android:name=".Booking_sel_locale"
-<<<<<<< Updated upstream
-            android:exported="false">
-=======
-
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
->>>>>>> Stashed changes
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity android:name=".Booking_sel_schedule"
@@ -50,7 +46,7 @@
         </activity>
 
         <activity android:name=".booking_sel_staff"
-            android:exported="false">
+            android:exported="true">
         </activity>
         <activity android:name=".booking_confirm"
             android:exported="false">
@@ -78,17 +74,37 @@
             android:exported="false">
 
         </activity>
-        <activity android:name=".test"
-<<<<<<< Updated upstream
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-=======
+        <activity android:name=".NotiActivity"
             android:exported="false">
 
->>>>>>> Stashed changes
+        </activity>
+        <activity android:name=".Product"
+            android:exported="false">
+
+        </activity>
+        <activity android:name=".Payment_1"
+            android:exported="false">
+
+        </activity>
+        <activity android:name=".Payment_2"
+            android:exported="false">
+
+        </activity>
+        <activity android:name=".Profile"
+            android:exported="false">
+
+        </activity>
+        <activity android:name=".Shopping"
+                android:exported="false">
+
+        </activity>
+        <activity android:name=".History"
+                  android:exported="false">
+
+        </activity>
+        <activity android:name=".test"
+            android:exported="true">
+
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
